--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -10,6 +10,7 @@ chrono = "0.4.10"
 csv = "1.1.2"
 zip = {version="0.5.4", default-features = false, features = ["deflate"]}
 
+zstore = { version="0.0.1", path  = "../zstore"}
 
 [build-dependencies]
 zip = {version="0.5.4", default-features = false, features = ["deflate"]}
